# Fregata

./: README.md
CBSdmode/benchmark/: bench.cpp
CBSdmode/include/: lweParams.hpp  trgsw.hpp
CBSdmode/src/axell/: gate.cpp
CBSdmode/test/: combinedmem.cpp  evalauto.cpp  externalproduct.cpp  externalproductntt.cpp  gatebootstrappingntt.cpp  trlweenc.cpp
CBSdmode/test/axell/: Tree1brAdder.cpp
CBSdmode/thirdparties/spqliox_aarch64/: fft_processor_spqliox_aarch64.h
CBSmode/: CMakeLists.txt  README.md
CBSmode/homoSM4_CB/: README.md
CBSmode/include/: cloudkey.hpp  trlwe.hpp
CBSmode/include/axell/: integer.hpp
CBSmode/include/params/: CGGI16.hpp  CGGI19.hpp
CBSmode/src/: gate.cpp  trlwe.cpp
CBSmode/test/: CMakeLists.txt  annihilate.cpp  bitsequencerepresentation.cpp  cereal.cpp  cmux.cpp  gatebootstrapping.cpp  identitybootstrapping.cpp  iks.cpp  my_circuitbootstrapping.cpp  nand.cpp  out_tlwe2trlweski.cpp  ram.cpp  rom.cpp  tlweenc.cpp
FBSmode/: CMakeLists.txt  README.md  SM4.cpp  functional_bootstrap.cpp  functional_bootstrap.h  homosm4.cpp  lib.cpp
GBSmode/: CMakeLists.txt  README.md  SM4.cpp
GBSmode1/: homosm4.cpp
GBSmodeq/: AES.cpp  homoAES.cpp
未命名文件夹/benchmark/: bench_stdcell.cpp
未命名文件夹/homoSM4_CB/: AES_homo.cpp  CMakeLists.txt  SM4.cpp  SM4_homo.cpp
未命名文件夹/include/: circuitbootstrapping.hpp  gatebootstrapping.hpp  mulfft.hpp  params.hpp  tlwe.hpp
未命名文件夹/src/: circuitbootstrapping.cpp  cloudkey.cpp  tlwe.cpp  trgsw.cpp
未命名文件夹/test/: circuitbootstrapping.cpp  invcircuitbootstrapping.cpp  nested_cmux.cpp  tlwemult.cpp  trlwemult.cpp
(+16 files in other folders)
